--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -31,9 +31,17 @@
 
     <div class="columns">
         <div class="column is-half has-text-centered">
-            <app-canvas [wrapper]="wrapper"></app-canvas>
+            <app-canvas [wrapper]="wrapper" (tileClick)="handleTileClick($event)"></app-canvas>
         </div>
         <div class="column is-half ">
+            <div class="level has-text-centered-mobile">
+                <div class="level-left">
+                    <button class="button is-link is-outlined" (click)="undo()">Undo</button>
+                </div>
+                <div class="level-right">
+                    <button class="button is-link" (click)="nextPhase()">Next Phase</button>
+                </div>
+            </div>
             <app-phase-setup [wrapper]="wrapper" (wrapperUpdate)="updateWrapper($event)" class="stretch" *ngIf="getPhase() == 'Setup'"></app-phase-setup>
             <app-phase-dmg [wrapper]="wrapper" (wrapperUpdate)="updateWrapper($event)" class="stretch" *ngIf="getPhase() == 'Dmg'"></app-phase-dmg>
             <app-phase-triggers [wrapper]="wrapper" (wrapperUpdate)="updateWrapper($event)" class="stretch" *ngIf="getPhase() == 'Triggers'"></app-phase-triggers>
