--- a/src/app/pages/game/game.component.sass
+++ b/src/app/pages/game/game.component.sass
@@ -8,9 +8,15 @@
 
 
 .is-higlighted 
-    display: inline-block !important
+    display: inline !important
     color: gold
     margin-bottom: 0
 
 .stretch
     width: 100%
+
+.is-blue
+    color: blue
+
+.is-red
+    color: red
