--- a/src/app/components/canvas/canvas.component.sass
+++ b/src/app/components/canvas/canvas.component.sass
@@ -1,10 +1,10 @@
-canvas 
-  height: 75vh
-  max-width: 100%
-  margin: auto
+// canvas 
+//   height: 75vh
+//   max-width: 100%
+//   margin: auto
 
-  // Media query for mobile devices
-  @media (max-width: 767px) 
-    height: 90vh
+//   // Media query for mobile devices
+//   @media (max-width: 767px) 
+//     height: 90vh
   
 
