--- a/src/app/components/tile-card/tile-card.component.sass
+++ b/src/app/components/tile-card/tile-card.component.sass
@@ -58,3 +58,15 @@
 
 .is-active:before
     background-color: rgba(160, 180, 255, 0.0)
+
+.resource-box 
+    background-color: rgba(255, 255, 255, 0.3)
+    border: 1px solid black
+    border-radius: 3px
+    display: inline-block 
+    padding: 5px 
+
+
+.resource-box span 
+    display: inline-block 
+    margin-right: 3px 
