--- a/src/app/components/tile-card/tile-card.component.html
+++ b/src/app/components/tile-card/tile-card.component.html
@@ -15,14 +15,15 @@
 >
     <h3 class="title is-4">{{ getName(key) }}</h3>
     <div>
-        <p>
-            <span *ngFor="let res of getCost(key)">
-                <img *ngIf="res == 'Egg'" class="resource-image" src="assets/bug/egg-eye.png" alt="Egg">
-                <img *ngIf="res == 'Corpse'" class="resource-image" src="assets/bug/alien-bug.png" alt="Giant Egg">
-                <img *ngIf="res == 'GiantEgg'" class="resource-image" src="assets/bug/alien-bug.png" alt="Giant Egg">
-            </span>
-        </p>
-        <br>
+        <div class="resource-box mb-1">
+                <span *ngFor="let res of getCost(key)">
+                    <img *ngIf="res == 'Egg'" class="resource-image" src="assets/bug/egg-eye.png" alt="Egg">
+                    <img *ngIf="res == 'Corpse'" class="resource-image" src="assets/bug/alien-bug.png" alt="Giant Egg">
+                    <img *ngIf="res == 'GiantEgg'" class="resource-image" src="assets/bug/alien-bug.png" alt="Giant Egg">
+                    <img *ngIf="res == 'Gold'" class="resource-image" src="assets/tech/stone-pile.png" alt="Giant Egg">
+                    <img *ngIf="res == 'Metal'" class="resource-image" src="assets/tech/metal-bar.png" alt="Giant Egg">
+                </span>
+        </div>
     </div>
     <div>
         <div>
